// Vitest Snapshot v1

exports[`should create root filter 1`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "fieldKey": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 2`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringContain {
    "fieldKey": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 3`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringStartsWith {
    "fieldKey": "name",
    "value": "starts with",
  },
}
`;

exports[`should create root filter 4`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEndsWith {
    "fieldKey": "name",
    "value": "ends with",
  },
}
`;

exports[`should create root filter 5`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): Not {
    "spec": NumberEqual {
      "fieldKey": "name",
      "value": 1,
    },
  },
}
`;

exports[`should create root filter 6`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): Not {
    "spec": NumberEqual {
      "fieldKey": "name.nested",
      "value": 1,
    },
  },
}
`;

exports[`should create root filter 7`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "fieldKey": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 8`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): StringEqual {
    "fieldKey": "name",
    "value": "hello",
  },
}
`;

exports[`should create root filter 9`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): NumberGreaterThan {
    "fieldKey": "gt",
    "value": 1,
  },
}
`;

exports[`should create root filter 10`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): NumberGreaterThanOrEqual {
    "fieldKey": "gte",
    "value": 1,
  },
}
`;

exports[`should create root filter 11`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): NumberLessThan {
    "fieldKey": "lt",
    "value": 1,
  },
}
`;

exports[`should create root filter 12`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): NumberLessThanOrEqual {
    "fieldKey": "lte",
    "value": 1,
  },
}
`;

exports[`should create root filter 13`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): DateIsToday {
    "fieldKey": "is_today",
    "value": null,
  },
}
`;

exports[`should create root filter 14`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): BoolIsTrue {
    "fieldKey": "field",
    "value": true,
  },
}
`;

exports[`should create root filter 15`] = `
OptionType {
  Symbol(T): true,
  Symbol(Val): BoolIsFalse {
    "fieldKey": "field",
    "value": false,
  },
}
`;
